--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@remix-run/node": "^2.12.1",
 		"@remix-run/react": "^2.12.1",
 		"@remix-run/serve": "^2.12.1",
+		"@remix-run/vercel": "^1.19.3",
 		"axios": "^1.7.7",
 		"isbot": "^4.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-spinners": "^0.14.1"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^2.12.1",
